--- a/style.css
+++ b/style.css
@@ -1,35 +1,72 @@
+@font-face{
+    font-family: "roboto";
+    src: url(./Font/Roboto-Regular.ttf)
+}
+
+
+body, html {
+    font-family: "roboto";
+}
+
 html, body {
     min-height: 100vh;
 } 
 
 div {
-    border: solid 1px gray;
     padding: 1%;
-    margin: 2px;
 }
+
+/* input[type="range"]{
+    -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+  width: 15rem;
+  (work later)
+} */
 
 body{
     display: flex;
     justify-content: center;
     flex: auto;
+
+    background-color: #ededed;
 }
 
 #container{
     display: flex;
     flex-direction: column;
-    flex: 0 1 1000px;
+    flex: 0 1 1500px;
     gap: 5px;
+
+    background-color: #ededed;
 }
+
+/* header */
 
 #head{
     display: flex;
     flex: 0 1 50px;
+    justify-content: center;
+
+    font-size: 3rem;
+    font-weight: bold;
+    font-family: "roboto";
+    border-radius: 0.5em;
+    color: whitesmoke;
+    
+
+    background-color: #1F2937;
 }
+
+/* content */
 
 #content{
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+
+    background-color: #ededed;
 }
 
 #mainContent{
@@ -37,46 +74,132 @@ body{
     align-content: flex-start;
     flex-wrap: wrap;
     flex: 0 1 auto;
+    gap: 10px;
+
+    border-radius: 1em;
+    background-color: #1F2937;
+
 }
+
+/* menu */
 
 .menu{
     display: flex;
     flex-direction: column;
     min-width: 0;
     flex: 1 1 30%;
+
+    border-radius: 0.5em;
+    background-color: #ededed;
 }
 
 .menu.content{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     flex-basis: 0 1 30%;
+    gap: 30px;
+
+    padding: 20px;
+    background-color: #1F2937;
 }
 
 .color{
     display: flex;
     flex-direction: column;
+    gap: 10px;
+
+    padding: 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: "roboto";
+
+    border-radius: 0.5em;
+    background-color: #ededed;
+    
 }
+
+.containerdiv{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: auto;
+}
+
+#colorPicker{
+    display: flex;
+    flex: 1 1 100px;
+    max-width: 100%;
+    min-width: 100%;
+
+    border-radius: 0.5em;
+    background-color: white;
+}
+
+
+
 
 .gridEditor{
     display: flex;
     flex-direction: column;
+    gap: 10px;
+
+    padding: 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: "roboto";
+
+    border-radius: 0.5em;
+    background-color: #ededed;
+
+    .containerdiv{
+        gap: 10px;
+        flex-direction: row;
+    }
 }
+
+#gridSelector{
+    display: flex;
+    flex: 1 1 30px;
+    max-width: 100%;
+    min-width: none;
+
+    background-color: sandybrown;
+}
+
+/* grid */
 
 
 .grid{
     display: flex;
     flex-direction: column;
     flex: 1 1 60%;
+    gap: 10px;
+    padding: 0;
+
+    border-radius: 0.5em;
+    background-color: #ededed;
 }
 
 .grid.title{
-    flex: 0 1 10px;
+    flex: 1 1 10px;
+
+    padding: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    font-family: "roboto";
+    color: white;
+    text-align: center;
+    border-radius: 0;
+    background-color: #1F2937;
 }
 
 .grid.space{
     flex: 1 0 auto;
     justify-content: center;
-    
+
+    margin: 10px;
+    background-color: #1F2937;
 
     .blockgrid{
         box-sizing: border-box;
@@ -85,24 +208,46 @@ body{
         display: flex;
         flex-wrap: wrap;
         max-width: 100%;
+
+        background-color: #ededed;
         }
 }
 
 .boxes{
-    font-size: 2px;
-    box-sizing: border-box;
-    aspect-ratio: 1/1;
-    
-    margin: 0;
-    padding: 0;
-    
     display: flex;
     flex: 0 1 25%;
+
+    font-size: 2px;
+    box-sizing: border-box;
+    border: solid 1px #1F2937;
+    aspect-ratio: 1/1;
+    
+    padding: 0;
+
+    background-color: white;
 }
 
-
+/* footer */
 
 #footer{
     display: flex;
     flex: 0 1 50px
+}
+
+@media (min-width: 200px){
+    .menu{
+        min-width: 50%;
+    }
+}
+
+@media (min-width: 500px){
+    .menu{
+        min-width: 40%;
+    }
+}
+
+@media (min-width: 1000px){
+    .menu{
+        min-width: 30%;
+    }
 }
