--- a/style.css
+++ b/style.css
@@ -46,10 +46,11 @@ body{
 
 #head{
     display: flex;
-    flex: 0 1 50px;
+    flex: 0 1 40px;
     justify-content: center;
 
     font-size: 3rem;
+    padding: 1% 5%;
     font-weight: bold;
     font-family: "roboto";
     border-radius: 0.5em;
@@ -89,7 +90,8 @@ body{
     min-width: 0;
     flex: 1 1 30%;
 
-    border-radius: 0.5em;
+    padding: 10px;
+    border-radius: 1em;
     background-color: #ededed;
 }
 
@@ -100,6 +102,7 @@ body{
     flex-basis: 0 1 30%;
     gap: 30px;
 
+    border-radius: 0.5em;
     padding: 20px;
     background-color: #1F2937;
 }
@@ -177,15 +180,15 @@ body{
     gap: 10px;
     padding: 0;
 
-    border-radius: 0.5em;
+    border-radius: 1em;
     background-color: #ededed;
 }
 
 .grid.title{
-    flex: 1 1 10px;
+    flex: 0 0 45px;
 
     padding: 15px;
-    font-size: 1.8rem;
+    font-size: 2rem;
     font-weight: bold;
     font-family: "roboto";
     color: white;
@@ -215,7 +218,7 @@ body{
 
 .boxes{
     display: flex;
-    flex: 0 1 25%;
+    flex: 0 1 16.6%;
 
     font-size: 2px;
     box-sizing: border-box;
@@ -231,7 +234,17 @@ body{
 
 #footer{
     display: flex;
-    flex: 0 1 50px
+    flex: 0 1 40px;
+    justify-content: center;
+
+    font-size: 3rem;
+    font-weight: bold;
+    font-family: "roboto";
+    border-radius: 0.5em;
+    color: whitesmoke;
+    
+
+    background-color: #1F2937;
 }
 
 @media (min-width: 200px){
